--- a/src/element-variables.scss
+++ b/src/element-variables.scss
@@ -3,8 +3,8 @@ Write your variables here. All available variables can be
 found in element-ui/packages/theme-chalk/src/common/var.scss.
 For example, to overwrite the theme color:
 */
-$--color-primary: #09959c;
-$--color-secondary: #2bb590;
+$--color-primary: #14b590;
+$--color-secondary: #09959c;
 
 /* icon font path, required */
 $--font-path: "~element-ui/lib/theme-chalk/fonts";
