--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,13 @@ header {
   box-shadow: -0.0625rem 0.125rem 0.375rem #808080bf;
   color: white;
 }
+.el-main {
+  overflow-x: hidden;
+}
+.content_wrapper {
+  overflow-x: auto;
+  width: calc(100% - 220px);
+}
 .table_wrapper th {
   text-transform: uppercase;
   text-align: center;
@@ -94,4 +101,17 @@ header {
 .highlighted-row {
   cursor: pointer;
   background-color: #e7feff !important;
+}
+.right_aside {
+  display: flex;
+  justify-content: center;
+  z-index: 1;
+  height: 90vh;
+  width: 220px !important;
+}
+.a-center {
+  text-align: center !important;
+}
+.form-item {
+  margin: 0.3rem 0;
 }
