--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -139,6 +139,7 @@ header {
   background-color: #14b590;
   box-shadow: -0.0625rem 0.125rem 0.375rem #808080bf;
   color: white;
+  z-index: 10;
 }
 
 .el-main {
