--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -88,165 +88,6 @@
   --color-font_primary: #333333;
   --color-font_secondary: #3b4256;
   --color-font_info: #76767a;
-  --filter-width: 220px;
-}
-
-a {
-  outline: none;
-  text-decoration: none;
-  color: var(--color-link);
-}
-
-a {
-  outline: none;
-  text-decoration: none;
-  color: var(--color-link);
-}
-
-.a-center {
-  text-align: center !important;
-}
-
-.a-left {
-  text-align: left !important;
-}
-
-.a-right {
-  text-align: right !important;
-}
-
-.align-center {
-  align-items: center !important;
-}
-
-.align-baseline {
-  align-items: baseline !important;
-}
-
-body,
-textarea {
-  font-family: "Roboto", sans-serif;
-}
-
-header,
-main,
-body {
-  padding: 0 !important;
-  margin: 0 !important;
-}
-
-header {
-  background-color: #14b590;
-  box-shadow: -0.0625rem 0.125rem 0.375rem #808080bf;
-  color: white;
-  z-index: 10;
-}
-
-.el-main {
-  overflow-x: hidden;
-}
-
-.content_wrapper {
-  flex-direction: column;
-}
-
-.pagination_wrapper {
-  padding: 2rem 0;
-  text-align: center;
-  border: 0.0625rem #f2f2f2 solid;
-}
-
-.pagination_wrapper span {
-  font-size: 0.875rem !important;
-  color: black;
-}
-
-.btn_group__wrapper {
-  display: flex;
-  justify-content: center;
-  padding: 0.3rem 0;
-  margin: 0.3rem 0;
-}
-
-.btn_group__wrapper button {
-  margin: 0 0.0625rem !important;
-}
-
-.header_title {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-transform: uppercase;
-}
-
-.d-flex {
-  display: flex !important;
-}
-
-.flex-column {
-  flex-direction: column !important;
-}
-
-.form_item {
-  margin: 0.3rem 0;
-}
-
-.form_item input {
-  min-width: 13.5625rem;
-}
-
-.form_label {
-  margin-right: 0.5rem;
-  font-size: 0.9375rem;
-}
-
-.form_property {
-  color: black;
-}
-
-.el-dialog__header {
-  text-transform: uppercase;
-  border-bottom: 0.0625rem #8080802b solid;
-}
-
-.el-dialog__title {
-  font-size: 0.875rem;
-}
-
-.el-menu-item.is-active {
-  color: #ffffff !important;
-}
-
-.el-menu--horizontal > .el-menu-item.is-active,
-.el-menu--horizontal > .el-submenu.is-active div {
-  background-color: #229173 !important;
-}
-
-.el-menu--horizontal > .el-submenu .el-submenu__title {
-  border-bottom: none !important;
-  color: #ffffff !important;
-}
-
-.pointer {
-  cursor: pointer !important;
-}
-
-.el-table .cell {
-  word-break: break-word !important;
-}
-
-.highlighted-row {
-  cursor: pointer;
-  background-color: #e7feff !important;
-}
-
-.a-center {
-  text-align: center !important;
-}
-
-.form-item {
-  margin: 0.3rem 0;
 }
 
 a {
@@ -310,6 +151,11 @@ body,
   padding: 0 !important;
 }
 
+.el-header {
+  height: auto !important;
+  z-index: 999
+}
+
 body span,
 p {
   word-break: normal !important;
@@ -342,7 +188,7 @@ p {
   border-bottom: 1px solid var(--color-divider);
 }
 
-.el-dialog__header > span {
+.el-dialog__header>span {
   font-size: 15px;
 }
 
@@ -355,11 +201,11 @@ p {
   outline: none !important;
 }
 
-.el-drawer > header > span:focus {
+.el-drawer>header>span:focus {
   outline-color: white;
 }
 
-.el-drawer > header > button:focus {
+.el-drawer>header>button:focus {
   outline-color: white;
 }
 
@@ -385,10 +231,6 @@ p {
 .el-card__header {
   display: flex;
   min-height: 55px;
-}
-
-.el-table th {
-  text-align: center;
 }
 
 .el-table .success-row,
@@ -445,17 +287,21 @@ p {
 }
 
 table thead tr th {
-  background-color: var(--color-bg_secondary) !important;
+  background-color: var(--color-primary) !important;
 }
 
 table thead tr th,
 table thead tr th i {
-  color: var(--color-font_primary) !important;
+  color: #ffffff !important;
+}
+
+.el-menu-item {
+  width: 100%;
 }
 
 .el-submenu .el-menu-item {
   height: auto;
-  width: 100%;
+
 }
 
 .el-submenu .el-menu-item span {
@@ -581,6 +427,13 @@ nav i {
   color: white !important;
 }
 
+.page_wrapper {
+  background: var(--color-overlay) url("../assets/bg_logo_color.webp");
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
 .pagination_wrapper {
   padding: 1rem;
 }
@@ -592,6 +445,10 @@ nav i {
 
 .shadowed {
   box-shadow: 2px 1px 6px #6161614d;
+}
+
+.rounded {
+  border-radius: 5px;
 }
 
 .space-between {
@@ -684,4 +541,14 @@ li {
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.hidden {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.visible {
+  opacity: 1;
+  visibility: visible;
 }
